# M-Suite

./: .gitignore  .gitmodules  .secrets.baseline  API_RESTART_NEEDED.md  CONSOLIDATION_COMPLETE.md  CONTROL_PLANE_SETUP.md  FIXES_APPLIED.md  LAUNCHAGENT_SETUP.md  M-Suite-Control-Plane-Upgrade.md  QUICK_START.md  README.md  SECURITY_SETUP.md  SETUP.md  STRUCTURE_MIGRATION.md  TROUBLESHOOTING.md  com.msuite.dev.plist  com.msuite.dev.plist.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
.kiro/specs/client-consolidation/: .config.kiro  README.md  audit-results.md  design.md  progress.md  requirements.md  tasks.md
.kiro/specs/client-party-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/practice-manager-data-fix/: AUDIT-SUMMARY.md  FINAL-AUDIT-REPORT.md  IMPLEMENTATION-COMPLETE.md  SOLUTION.md  audit-report.md  controller-audit.md  design.md  phase1-implementation-summary.md  requirements.md  tasks.md  template-improvement-analysis.md  ui-pages-audit.md
.kiro/steering/: product.md  structure.md  tech.md
apps/portal/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/portal-desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/portal-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/portal-desktop/src-tauri/capabilities/: default.json
apps/portal-desktop/src-tauri/src/: main.rs
scripts/: launch-msuite.sh  launchagent-entry.sh  practice-preflight.sh  restart-msuite.sh  safe-push.sh  start-msuite.sh  stop-msuite.sh  verify-setup.sh
(+14 files in other folders)
